Fix Bug 304111 - Kleopatra fails to build

Apply patch from Andrea Scarpino
It compiles on boost 1.49 too.

FIXED-IN: 4.10.1

BUG: 304111