kleopatra/models/keylistmodel.cpp
@@ -60,10 +60,10 @@
 #ifdef _WIN32_WCE
 #define BOOST_ALL_NO_LIB
 #endif
-#include <boost/graph/adjacency_list.hpp>
 
 #ifndef Q_MOC_RUN // QTBUG-22829
 #include <boost/graph/topological_sort.hpp>
+#include <boost/graph/adjacency_list.hpp>
 #endif
 
 #include <algorithm>
